k8s/app/deploy-rootpages-main.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: deploy-rootpages-main
  namespace: ns-rootpages
  labels:
    app: rootpages-main
spec:
  replicas: 3
  selector:
    matchLabels:
      app: rootpages-main
  strategy:
    # This deals with a situation where a Kubernetes node reboots which leads to the "emptyDir" ephemeral storage being lost.
    type: Recreate
  template:
    metadata:
      labels:
        app: rootpages-main
    spec:
      containers:
        - name: nginx
          image: nginx:1.29.5
          ports:
            - name: http
              containerPort: 80
          resources:
            limits:
              memory: 1Gi
            requests:
              memory: 256Mi
          volumeMounts:
            - name: tmp-dir
              mountPath: /usr/share/nginx/html
              readOnly: true
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            timeoutSeconds: 2
      volumes:
        - name: tmp-dir
          emptyDir: {}
