k8s/app/svc-rootpages-stable.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: svc-rootpages-stable
  namespace: ns-rootpages
  labels:
    app: rootpages-stable
spec:
  ports:
    - name: http
      port: 80
  selector:
    app: rootpages-stable
  type: ClusterIP
